--- a/.gitignore
+++ b/.gitignore
@@ -112,3 +112,8 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+/Data/
+/ElonMusk.mp4
+/videoauron.mp4
+/entrenamientosOpenCVruidos/
+/EntrenamientoEigenFaceRecognizer.xml
